# eve_tools

./: .gitignore  Cargo.toml  README.md  docker-compose.test.yml  package.json  pnpm-lock.yaml
.github/workflows/: deploy-prod.yml  test-ssh.yml
apps/desktop/: .env.example  index.html  package.json
apps/desktop/scripts/: run-with-env.mjs  run-with-env.test.mjs
apps/desktop/src/: App.tsx  commands.ts  styles.css
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/desktop/src/i18n/: index.ts  resources.ts
crates/api/: Cargo.toml
crates/api/src/: lib.rs
crates/api/tests/: read_api.rs
crates/catalog/: Cargo.toml
crates/catalog/src/: lib.rs
crates/catalog/tests/: service.rs
crates/db/: Cargo.toml
crates/db/migrations/: 0001_create_catalog_schema.sql  0002_add_catalog_localizations.sql  0003_add_market_sync_tables.sql  0004_add_market_sync_operations.sql  0005_add_authenticated_order_monitor.sql
crates/db/src/: auth.rs  catalog.rs  lib.rs  market.rs  schema.rs
crates/db/tests/: auth_repository.rs  catalog_repository.rs  market_repository.rs  schema_migrations.rs
crates/domain/: Cargo.toml
crates/domain/src/: fixtures.rs  lib.rs  market.rs  market_analysis.rs  repricing.rs  scoring.rs  views.rs
crates/esi/: Cargo.toml
crates/esi/src/: client.rs  lib.rs  models.rs
crates/esi/tests/: client.rs  model_parsing.rs
crates/esi/tests/fixtures/: character_orders.json  market_history.json  market_orders.json  type_info.json  universe_ids.json
crates/http-api/: Cargo.toml
crates/http-api/src/: lib.rs
crates/http-api/tests/: read_http_api.rs
crates/sde/: Cargo.toml
crates/sde/src/: archive.rs  client.rs  lib.rs  models.rs  parser.rs
crates/sde/tests/: client.rs  parser.rs
crates/test-support/: Cargo.toml
crates/test-support/src/: lib.rs
crates/worker/: Cargo.toml
crates/worker/src/: lib.rs
crates/worker/tests/: authenticated_order_sync.rs  public_market_sync.rs
docs/deployment/: aws-s3-ssm-oidc.md  ssh.md
docs/superpowers/plans/: 2026-05-25-tauri-desktop-foundation.md  2026-05-26-public-esi-market-sync.md  2026-05-26-sde-static-catalog-import.md  2026-05-27-catalog-import-entrypoints.md  2026-05-27-catalog-standard-localization.md  2026-05-29-authenticated-order-monitor.md  2026-05-29-production-sync-operations.md  2026-05-29-s3-ssm-oidc-deploy.md
docs/superpowers/specs/: 2026-05-25-eve-merchant-assistant-architecture-design.md  2026-05-25-jita-public-repricing-design.md  2026-05-25-jita-two-board-station-trading-mvp-design.md  2026-05-26-desktop-i18n-design.md  2026-05-26-npc-hub-selection-discovery-design.md  2026-05-26-sde-static-catalog-import-design.md  2026-05-27-catalog-import-entrypoints-design.md  2026-05-27-catalog-standard-localization-design.md  2026-05-29-authenticated-order-monitor-design.md  2026-05-29-production-sync-operations-design.md  2026-05-29-s3-ssm-oidc-deploy-design.md
