[workspace]
resolver = "2"
members = [
  "crates/domain",
  "crates/esi",
  "crates/db",
  "crates/sde",
  "crates/catalog",
  "crates/worker",
  "crates/test-support",
  "apps/desktop/src-tauri"
]

[workspace.package]
edition = "2021"
license = "UNLICENSED"
version = "0.1.0"
rust-version = "1.82"

[workspace.dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.13", default-features = false, features = ["json", "rustls"] }
rust_decimal = { version = "1", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio-rustls", "postgres", "chrono", "json", "macros", "migrate"] }
tauri = { version = "2" }
tauri-build = { version = "2" }
tempfile = "3"
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
url = "2"
zip = { version = "5", default-features = false, features = ["deflate"] }
