[package]
name = "evetools-api"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
evetools-db = { path = "../db" }
evetools-domain = { path = "../domain" }
rust_decimal.workspace = true
serde.workspace = true
sqlx.workspace = true
thiserror.workspace = true

[dev-dependencies]
evetools-sde = { path = "../sde" }
evetools-test-support = { path = "../test-support" }
serde_json.workspace = true
tokio.workspace = true
