[package]
name = "evetools-http-api"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
axum.workspace = true
evetools-api = { path = "../api" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true

[dev-dependencies]
evetools-db = { path = "../db" }
evetools-sde = { path = "../sde" }
evetools-test-support = { path = "../test-support" }
http-body-util = "0.1"
tower = "0.5"
