[package]
name = "evetools-sde"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
url.workspace = true
zip.workspace = true

[dev-dependencies]
httpmock = "0.8.3"
tempfile.workspace = true
tokio.workspace = true
