[package]
name = "evetools-worker"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
chrono.workspace = true
evetools-db = { path = "../db" }
evetools-esi = { path = "../esi" }
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
thiserror.workspace = true
tokio.workspace = true

[dev-dependencies]
evetools-test-support = { path = "../test-support" }
httpmock = "0.8.3"
