[package]
name = "evetools-desktop"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lib]
name = "evetools_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build.workspace = true

[dependencies]
chrono.workspace = true
evetools-domain = { path = "../../../crates/domain" }
evetools-esi = { path = "../../../crates/esi" }
evetools-worker = { path = "../../../crates/worker" }
rust_decimal.workspace = true
serde.workspace = true
serde_json.workspace = true
tauri.workspace = true
tokio.workspace = true
