[package]
name = "evetools-desktop"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lib]
name = "evetools_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build.workspace = true

[dependencies]
evetools-api = { path = "../../../crates/api" }
evetools-domain = { path = "../../../crates/domain" }
evetools-worker = { path = "../../../crates/worker" }
reqwest.workspace = true
serde.workspace = true
tauri.workspace = true
tokio.workspace = true
