[package]
name = "evetools-desktop"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lib]
name = "evetools_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build.workspace = true

[dependencies]
evetools-api = { path = "../../../crates/api" }
evetools-db = { path = "../../../crates/db" }
evetools-domain = { path = "../../../crates/domain" }
evetools-esi = { path = "../../../crates/esi" }
evetools-worker = { path = "../../../crates/worker" }
base64.workspace = true
chrono.workspace = true
rand.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
tauri.workspace = true
tokio.workspace = true
url.workspace = true
